blue-green-kubernetes/green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: green-app
  name: green-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: green-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: green-app
    spec:
      containers:
      - image: hashicorp/http-echo
        name: http-echo
        ports:
        - containerPort: 8081
        args: 
         - "-listen=:8081"
         - "-text=I am green"
        resources: {}
status: {}
