blue-green-kubernetes/ingress-blue.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
       name: blue-app-ingress
       annotations:
          nginx.ingress.kubernetes.io/rewrite-target: /
          #nginx.ingress.kubernetes.io/canary: "true"
          #nginx.ingress.kubernetes.io/canary-weight: "100"
          #nginx.ingress.kubernetes.io/canary-weight-total: "100"
spec:
       ingressClassName: nginx
       rules:
       - http:
           paths:
           - path: /
             pathType: Prefix
             backend:
                  service:
                        name: blue-app-service
                        port: 
                           number: 8080
         host: kalraandassociates.com
