blue-green-kubernetes/ingress-green.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
       name: green-app-ingress
       annotations:
          nginx.ingress.kubernetes.io/rewrite-target: /
          nginx.ingress.kubernetes.io/canary: "true"
          nginx.ingress.kubernetes.io/canary-weight: "25"
spec:
       ingressClassName: nginx
       rules:
       - http:
           paths:
           - path: /
             pathType: Prefix
             backend:
                  service:
                     name: green-app-service
                     port:
                        number: 8081
         host: kalraandassociates.com
